--- a/css.css
+++ b/css.css
@@ -21,7 +21,7 @@ body{
     display:flex;
     align-items: center;
     justify-content: start;
-    width: 60%;
+    width: 70%;
     height: 100vh;
 }
 
@@ -33,5 +33,129 @@ body{
 }
 
 .instagram-phone img{
-    height: 50rem;
+    height: 45rem;
+}
+
+.instagram-continue{
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    width: 50%;
+    height: 34rem;
+}
+
+.group{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+    width: 100%;
+    padding: 1.3rem 0;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+}
+
+.group:nth-child(1){
+    min-height: 19rem;
+}
+
+.instagram-logo{
+    width: 10rem;
+}
+
+.profile-picture{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.profile-picture img{
+    height: 6rem;
+}
+
+.instagram-login{
+    background-color: #0095f6;
+    color: white;
+    padding: 8px;
+    border-radius: 4px;
+}
+
+.instagram-logout{
+    color:#0095f6;
+    margin-top: 1rem;
+}
+
+.not-account{
+    color: rgb(160,160,160);
+}
+
+.link-blue{
+    color:#0095f6;
+}
+
+.get-the-app{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 1.3rem 0;
+    font-weight: bold;
+}
+
+.download{
+    display:flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem;
+}
+
+.app-download{
+    height: 3rem;
+    width: 10rem;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.app-download:nth-child(1){
+    background-image: url('./img/app_store.png');
+}
+
+.app-download:nth-child(2){
+    background-image: url('./img/google_play.png');
+}
+
+@media(max-width: 1024px){
+    .instagram-wrapper{
+        width:90%;
+    }
+
+    
+}
+
+@media(max-width: 650px){
+    body{
+        background-color: white;
+    }
+
+    .group{
+        border: 1px solid transparent;
+    }
+
+    .instagram-wrapper{
+        width:90%;
+    }
+
+    .instagram-phone{
+        display:none;
+    }
+
+    .instagram-continue{
+        width:100%;
+    }
 }
