--- a/css.css
+++ b/css.css
@@ -6,34 +6,66 @@
     font-family: sans-serif;
     font-size: 14px;
 }
+:root{
+    --body-bg: rgb(243,243,243);
+    --group-bg: white;
+    --button-color: #0095f6;
+    --border-color: lightgray;
+    --text-color: black;
+}
+
+.dark-mode:root {
+    --group-bg: #354452;
+    --body-bg: #1f2931;
+    --border-color: #546979;
+    --text-color: white;
+}
+
+.dark-mode:root .instagram-logo{
+    width: 10rem;
+    filter: invert(100%);
+}
 
 body{
     width: 100%;
     min-height: 100vh;
-    background-color: rgb(243,243,243);
+    background-color: var(--body-bg);
     margin:0;
     padding:0;
     display:flex;
-    justify-content: center;
+    justify-content: end;
+    align-items: center;
+    flex-direction: column;
 }
 
 .instagram-wrapper{
     display:flex;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     width: 70%;
-    height: 100vh;
+    height: 90vh;
+}
+
+footer{
+    display: flex;
+    width:100%;
+    height:40px;
+    background-color: var(--button-color);
+    justify-content: center;
+    align-items: center;
+    color: var(--text-color);
 }
 
 .instagram-phone{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 50%;
 }
 
 .instagram-phone img{
-    height: 45rem;
+    height: 40rem;
 }
 
 .instagram-continue{
@@ -42,7 +74,7 @@ body{
     justify-content: space-around;
     flex-direction: column;
     width: 50%;
-    height: 34rem;
+    height: 35rem;
 }
 
 .group{
@@ -50,10 +82,10 @@ body{
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    background-color: white;
+    background-color: var(--group-bg);
     width: 100%;
     padding: 1.3rem 0;
-    border: 1px solid lightgray;
+    border: 1px solid var(--border-color);
     border-radius: 10px;
 }
 
@@ -78,14 +110,14 @@ body{
 }
 
 .instagram-login{
-    background-color: #0095f6;
-    color: white;
+    background-color: var(--button-color);
+    color: var(--group-bg);
     padding: 8px;
     border-radius: 4px;
 }
 
 .instagram-logout{
-    color:#0095f6;
+    color:var(--button-color);
     margin-top: 1rem;
 }
 
@@ -94,7 +126,17 @@ body{
 }
 
 .link-blue{
-    color:#0095f6;
+    color:var(--button-color);
+}
+
+.color-mode{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-weight: bold;
+    color: var(--text-color);
 }
 
 .get-the-app{
@@ -105,6 +147,7 @@ body{
     width: 100%;
     padding: 1.3rem 0;
     font-weight: bold;
+    color: var(--text-color);
 }
 
 .download{
@@ -134,13 +177,11 @@ body{
     .instagram-wrapper{
         width:90%;
     }
-
-    
 }
 
 @media(max-width: 650px){
     body{
-        background-color: white;
+        background-color: var(--group-bg);
     }
 
     .group{
